# postgres-fts-backend

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: multi-index-design.md
postgres_fts_backend/: #__init__.py#  __init__.py  apps.py  models.py  operations.py
postgres_fts_backend/management/commands/: build_postgres_schema.py
tests/: conftest.py  search_indexes.py  settings.py  test_backend.py
tests/core/: models.py
tests/core/fixtures/: bulk_data.json
tests/core/templates/search/indexes/core/: mockmodel_text.txt
tests/search_migrations/: 0001_initial.py
